--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 	<script type="text/javascript" src="js/three.js/three.min.js"></script>
 	<script type="text/javascript" src="js/three.js/libs/tween.min.js"></script>
 	<script type="text/javascript" src="js/three.js/Detector.js"></script>
-	<script type="text/javascript" src="js/three.js/libs/Stats.js"></script>
+	<script type="text/javascript" src="js/three.js/libs/stats.js"></script>
 	<script type="text/javascript" src="js/three.js//controls/TrackballControls.js"></script>
 	<script type="text/javascript" src="js/three.js/renderers/CSS3DRenderer.js"></script>
 	<script type="text/javascript" src="js/wck2016.opening-movie.js"></script>
 </head>
 <body>
-<audio id="audio" src="https://drive.google.com/folderview?id=0B_6sBwmtt1dxTUw4c2N6YmtqTWc&usp=sharing/audio/wck2016_op.mp3" preload="auto"></audio>
+<audio id="audio" src="https://drive.google.com/open?id=0B_6sBwmtt1dxQmt2M20yUzk4MmM" preload="auto"></audio>
 <!--<audio id="audio" src="audio/wck2016_op.mp3" preload="auto"></audio>-->
 <div class="start"><a class="btn btn-default btn-lg" href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span><span class="screen-reader-text">Play</span></a></div>
 <div id="container"></div>
