--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="js/wck2016.opening-movie.js"></script>
 </head>
 <body>
-<audio id="audio" src="https://drive.google.com/open?id=0B_6sBwmtt1dxQmt2M20yUzk4MmM" preload="auto"></audio>
+<audio id="audio" src="https://docs.google.com/uc?id=0B_6sBwmtt1dxYlRud2h5WFNYdjQ" preload="auto"></audio>
 <!--<audio id="audio" src="audio/wck2016_op.mp3" preload="auto"></audio>-->
 <div class="start"><a class="btn btn-default btn-lg" href="#"><span class="glyphicon glyphicon-play" aria-hidden="true"></span><span class="screen-reader-text">Play</span></a></div>
 <div id="container"></div>
