--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <title>WordCamp Kansai 2016</title>
+    <title>WordCamp Kansai 2016 Opening Movie</title>
 	<meta name="Author" content="WordCamp Kansai 2016"/>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="robots" content="noindex">
