--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="js/three.js/three.min.js"></script>
 	<script type="text/javascript" src="js/three.js/libs/tween.min.js"></script>
 	<script type="text/javascript" src="js/three.js/Detector.js"></script>
-	<script type="text/javascript" src="js/three.js/libs/Stats.js"></script>
+	<script type="text/javascript" src="js/three.js/libs/stats.js"></script>
 	<script type="text/javascript" src="js/three.js//controls/TrackballControls.js"></script>
 	<script type="text/javascript" src="js/three.js/renderers/CSS3DRenderer.js"></script>
 	<script type="text/javascript" src="js/wck2016.opening-movie.js"></script>
